--- a/default.html
+++ b/default.html
@@ -47,7 +47,7 @@
         <div class="row">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="#">BYUNNNN</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -65,8 +65,8 @@
           <!--  NAVIGATION -->
           <div class="container">
             <ul class="list-inline" style="margin-bottom: 5px">
-              <li><a class="link" id="nav" href="about.html">About</a></li>
-              <li><a class="link" id="nav" href="index.html">Works</a></li>
+              <li><a class="link" id="nav" href="">About</a></li>
+              <li><a class="link" id="nav" href="">Works</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <li><a class="link" id="nav" href="">Contact</a></li>
             </ul>
@@ -81,7 +81,7 @@
         <div class="row">
 
           <!--  NEWS STRIP 1-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
+          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
               <h4>CODING</h4>
@@ -96,7 +96,7 @@
               <a href=""><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
             </div>
             <!-- description -->
-            <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="archi.html">More>></a></span></p>
+            <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="">More>></a></span></p>
             <!-- button -->
             <div class="more button">
 
@@ -122,7 +122,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
               <h4>TOOLS</h4>
@@ -154,48 +154,8 @@
             </div>
           </div>
 
-          <!--  NEWS STRIP 3 -->
-          <div class="col-sm-3 col-md-4 col-lg-3 col-xs-12">
-            <!-- category title -->
-            <div class="category title">
-              <h4>CRITIQUE</h4>
-              <hr>
-              <h3></h3>
-            </div>
-            <!-- ONE -->
-            <!-- project title -->
-            <h5><em><a class="link" href="">YOUTH CRIMES AND SCHOLASTIC APTITUDE TEST</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href=""><img src="image/data_02.png" class="img-responsive"></a>
-              <a href=""><img src="image/data_01.png" class="img-responsive"></a>
-            </div>
-            <!-- description -->
-            <p>Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea. Full analysis post. <span id="more"><a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250">More @Medium>></a></span> </p>
-            <!-- button -->
-            <div class="more button">
-
-            </div>
-            <!-- break -->
-            <br>
-            <hr>
-            <!-- TWO -->
-            <!-- project title -->
-            <h5><em><a class="link" href="">CARNISSEUR™ AFTERMATH</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href=""><img src="image/carni_01.png" class="img-responsive"></a>
-              <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
-            </div>
-            <!-- description -->
-            <p>This is a writing on the aftermath of Carnisseur™, a fictional food corporation placed not so far into the future, its emergence and its lessons. The whole project is based on the premise that food future will be inevitably exploited by capitalistic tools. A criticism on corporations that commercializes basic rights to live as a human being. <span id="more"><a href="">More>></a></span></p>
-            <!-- button -->
-            <div class="more button">
-            </div>
-          </div>
-
           <!--  VIMEO MEDIAFEED -->
-          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12">
+          <div class="col-sm-9 hidden-md col-lg-9 col-xs-8">
             <div class="title@crzikrn">
               <h4>MEDIA ARCHIVE @CRIZKRN</h4>
               <hr>
