--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <div class="row">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="#">BYUNNNN</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -65,8 +65,8 @@
           <!--  NAVIGATION -->
           <div class="container">
             <ul class="list-inline" style="margin-bottom: 5px">
-              <li><a class="link" id="nav" href="">About</a></li>
-              <li><a class="link" id="nav" href="">Works</a></li>
+              <li><a class="link" id="nav" href="about.html">About</a></li>
+              <li><a class="link" id="nav" href="index.html">Works</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <li><a class="link" id="nav" href="">Contact</a></li>
             </ul>
