--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- November 2015 Karam Byun
+Webpage Portfolio using Bootstrap
+Design Documentation @ www.byunnnn.com/making-of
+"" -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +13,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <script src=""></script>
+
+  
+
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
     <style>
@@ -90,7 +98,7 @@
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href=""> ARCHITECTURAL GRAFITTI</a></em></h5>
+            <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFITTI</a></em></h5>
             <!-- project image -->
             <div class="image">
               <a href=""><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
@@ -168,7 +176,7 @@
             <!-- project image -->
             <div class="image">
               <a href=""><img src="image/data_02.png" class="img-responsive"></a>
-              <a href=""><img src="image/data_01.png" class="img-responsive"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
             <p>Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea. Full analysis post. <span id="more"><a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250">More @Medium>></a></span> </p>
