--- a/archi.html
+++ b/archi.html
@@ -48,7 +48,7 @@
         <div class="row">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="#">BYUNNNN</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -66,8 +66,8 @@
           <!--  NAVIGATION -->
           <div class="container">
             <ul class="list-inline" style="margin-bottom: 5px">
-              <li><a class="link" id="nav" href="">About</a></li>
-              <li><a class="link" id="nav" href="">Works</a></li>
+              <li><a class="link" id="nav" href="about.html">About</a></li>
+              <li><a class="link" id="nav" href="index.html">Works</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <li><a class="link" id="nav" href="">Contact</a></li>
             </ul>
@@ -85,7 +85,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CODING</h4>
+              <h4>CODING <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -102,6 +102,12 @@
             ITP, NYU<br>
             New York, NY<br>
             2014</p>
+
+            <div style="text-align: center;">
+              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+            </div>
+
           </div>
 
           <!--  NEWS STRIP 2-->
@@ -115,6 +121,7 @@
             <!-- ONE -->
             <!-- project description -->
             <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.</p>
+            
             <p>Used processing to mine xml graffitii data list to render in real-time and camera 3d movements to keep handlers in check. The rendering of 3D.</p>
             <hr>
             <!-- project image -->
