--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@ Design Documentation @ www.byunnnn.com/making-of
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <script src=""></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="libraries/p5.js" type="text/javascript"></script>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
 
-  
+    <style>
+    body {padding: 0; margin: 0; background-color: transparent;} canvas { vertical-align: top; width:100%; height:100%;  visibility: visible;}
+    </style>
 
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
@@ -45,6 +52,10 @@ Design Documentation @ www.byunnnn.com/making-of
       .btn {font-weight: bold;}
       #more { text-decoration: none; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
+      .paper.cover {
+          position: absolute;
+          bottom: 15%;
+        }
     </style>
   </head>
   <body>
@@ -203,7 +214,7 @@ Design Documentation @ www.byunnnn.com/making-of
           </div>
 
           <!--  VIMEO MEDIAFEED -->
-          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12">
+          <div class="col-sm-3 hidden-md col-lg-3 col-xs-12" id="p5">
             <div class="title@crzikrn">
               <h4>MEDIA ARCHIVE @CRIZKRN</h4>
               <hr>
@@ -241,5 +252,11 @@ Design Documentation @ www.byunnnn.com/making-of
         </div>
       </div>
     </div>
+    <script>
+          var header = document.getElementsByClassName('center-container')[0];
+          $(header).addClass('cover');
+
+
+      </script>
   </body>
 </html>
