added data analysis

--- a/data_analysis.html
+++ b/data_analysis.html
@@ -85,7 +85,7 @@
           <div class="col-sm-3 col-md-3 col-lg-3 col-xs-4">
             <!-- category title -->
             <div class="category title" style="">
-              <h4>CODING <a href="index.html"><</a> </h4>
+              <h4>CRITIQUE <a href="index.html"><</a> </h4>
               <hr>
               <h3></h3>
             </div>
@@ -94,11 +94,11 @@
 
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/data_00.jpg" class="img-responsive img-circle"></a>
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
-            <b>Architectural Grafitti</b><br>
+            <b>Data Analysis: Youth Crimes and Scholastic Aptitude Tests</b><br>
             ITP, NYU<br>
             New York, NY<br>
             2014</p>
@@ -114,26 +114,27 @@
           <div class="col-sm-9 col-md-9 col-lg-9 col-xs-8">
             <!-- category title -->
             <div class="category title">
-              <h4>ARCHITECTURAL GRAFITTI</h4>
+              <h4>YOUTH CRIMES AND SCHOLASTIC APTITTUDE TESTS</h4>
               <hr>
               <h3></h3>
             </div>
             <!-- ONE -->
             <!-- project description -->
-            <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.</p>
+            <p>Data analysis in the relationship between youth crimes, stress, depression, college scholastic ability tests in Korea. Full analysis post. <span id="more"><a href="https://medium.com/i-data/relationships-between-youth-crimes-stress-depression-and-college-scholastic-ability-tests-4ef78ca1a250"><b>More @Medium</b></a></span> </p>
 
-            <p>Used processing to mine xml graffitii data list to render in real-time and camera 3d movements to keep handlers in check. The rendering of 3D.</p>
             <hr>
             <!-- project image -->
             <div class="image">
               <div class="col-md-6">
-                <img src="image/graf_02.jpg" class="img-responsive img-circle">
-                <img src="image/graf_03.jpg" class="img-responsive img-circle">
-                <img src="image/graf_04.png" class="img-responsive img-circle">
-                <img src="image/graf_00.jpg" class="img-responsive img-circle">
+                <img src="image/data_02.png" class="img-responsive">
+                <img src="image/data_01.png" class="img-responsive">
+                <!-- <img src="image/data_03.png" class="img-responsive"> -->
+                <img src="image/data_04.png" class="img-responsive">
+
+
               </div>
               <div class="col-md-6">
-                <img src="image/graf_01.jpg" class="img-responsive">
+
                 <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.
                 Substantially,Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design.Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. </p>
               </div>
