--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!-- November 2015 Karam Byun
 Webpage Portfolio using Bootstrap
 Design Documentation @ www.byunnnn.com/making-of
-"" -->
+
+“The Lord your God is with you,
+    the Mighty Warrior who saves.
+He will take great delight in you;
+    in his love he will no longer rebuke you,
+    but will rejoice over you with singing.” - Zephaniah 3:17 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,8 +18,6 @@ Design Documentation @ www.byunnnn.com/making-of
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <script src=""></script>
-
-  
 
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
@@ -106,9 +109,7 @@ Design Documentation @ www.byunnnn.com/making-of
             <!-- description -->
             <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="archi.html">More>></a></span></p>
             <!-- button -->
-            <div class="more button">
-
-            </div>
+            <div class="more button"></div>
 
             <br>
             <hr>
@@ -122,11 +123,7 @@ Design Documentation @ www.byunnnn.com/making-of
             <!-- description -->
             <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. <span id="more"><a href="">More>></a></span></p>
             <!-- button -->
-            <div class="more button">
-
-            </div>
-
-
+            <div class="more button"></div>
           </div>
 
           <!--  NEWS STRIP 2-->
@@ -172,7 +169,7 @@ Design Documentation @ www.byunnnn.com/making-of
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="">YOUTH CRIMES AND SCHOLASTIC APTITUDE TEST</a></em></h5>
+            <h5><em><a class="link" href="data_analysis.html">YOUTH CRIMES AND SCHOLASTIC APTITUDE TEST</a></em></h5>
             <!-- project image -->
             <div class="image">
               <a href=""><img src="image/data_02.png" class="img-responsive"></a>
